--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,6 +8,7 @@ html(lang="en")
 		link(rel="stylesheet", href='/css/style.css')
 		link(rel="stylesheet", href='/css/lists.css')
 		link(href="https://fonts.googleapis.com/css2?family=Inter&family=Raleway:wght@500;600;700;800&display=swap" rel="stylesheet")
+		block script
 		title Secret Santa
 	body
 		header
